test_suite/tests/ui/identifier/other_not_last.stderr
error: #[serde(other)] must be on the last variant
 --> tests/ui/identifier/other_not_last.rs:7:5
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
...
7 | /     #[serde(other)]
8 | |     Other,
  | |_________^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
